[gd_scene load_steps=3 format=3 uid="uid://nac1si0nbsci"]

[ext_resource type="Script" uid="uid://cmfgbdolcshw5" path="res://tetris_board.gd" id="1_naa5i"]
[ext_resource type="Script" uid="uid://bkebtpnyiv7w6" path="res://drop_timer.gd" id="2_h0iqh"]

[node name="TetrisBoard" type="Node2D"]
script = ExtResource("1_naa5i")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 320.0
offset_bottom = 640.0
color = Color(0.0980392, 0.0980392, 0.0980392, 1)

[node name="GameLabel" type="Label" parent="."]
visible = false
anchors_preset = -1
anchor_bottom = 0.5
offset_top = 256.0
offset_right = 320.0
offset_bottom = 336.0
grow_vertical = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 48
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeftTimer" type="Timer" parent="."]

[node name="DropTimer" type="Timer" parent="."]
autostart = true
script = ExtResource("2_h0iqh")

[node name="RightTimer" type="Timer" parent="."]

[node name="DownTimer" type="Timer" parent="."]

[connection signal="timeout" from="LeftTimer" to="." method="_on_left_timer_timeout"]
[connection signal="timeout" from="DropTimer" to="." method="_on_drop_timer_timeout"]
[connection signal="timeout" from="RightTimer" to="." method="_on_right_timer_timeout"]
[connection signal="timeout" from="DownTimer" to="." method="_on_down_timer_timeout"]
